--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div>
                             <i class="fas fa-comment-dots text-5xl mb-4"></i>
                             <p>
-                                <strong>Welcome to LM Studio Assistant!</strong><br><br>
+                                <strong>Welcome to LM Studio Web Assistant!</strong><br><br>
                                 Start a new chat or select an existing one from the side menu.
                             </p>
                         </div>
